@@ -1,8 +1,4 @@
-//model
-
 var m_selection = {}
-
-//controller
 
 function sel_init() {
     m_selection["selection"] = null;
@@ -28,8 +24,6 @@ function sel_set_selection(node) {
         sel_update_display();
     }
 }
-
-// view
 
 function sel_clear_display() {
     removeChildren(m_selection["titles"]);
@@ -148,6 +142,8 @@ function sel_update_display(node) {
                 a.appendChild(document.createTextNode(get_port_name(port.port)));
                 a.setAttribute("data-content", get_port_description(port.port));
                 a.setAttribute("class", "popup");
+                //This works as an alternative, but it's ugly.
+                //a.title = get_port_description(port.port)
             } else {
                 a.appendChild(document.createTextNode(port.port.toString()));
             }
